# Checking-Pill

./: .gitignore  README.md  pyproject.toml
configs/: default_config.json  runtime_yolo_config.json
data/detection_yolo/: README.md  archive_data.yaml
data/identity/: README.md
data/manifests/: README.md  manifest_build_report.json  mediseg_unlabeled_manifest.csv
data/quality/: README.md
data/real_test_images/: README.md
docs/: ALGORITHMS.md  ARCHITECTURE.md  COLAB_TRAINING.md  DATASET_STRATEGY.md  OPERATIONS_GUIDE.md  RUNTIME_GUIDE.md  TRAINING_COLAB_GUIDE.md
edgevision/: __init__.py  batch.py  cli.py  config.py  cropper.py  demo.py  features.py  image_utils.py  pipeline.py  postprocess.py  precheck.py  reporting.py  schemas.py  site_project.py
edgevision/detectors/: __init__.py  base.py  heuristic.py  ultralytics_yolo.py
edgevision/identifiers/: __init__.py  base.py  reference_gallery.py
edgevision/quality/: __init__.py  base.py  rule_based.py
edgevision/visualization/: __init__.py  annotate.py
models/: README.md
reference_gallery/: README.md
tests/: test_demo_smoke.py  test_generic_object_flow.py  test_pipeline_synthetic.py  test_reference_gallery.py  test_site_project.py
tools/: audit_epillid_source.py  audit_yolo_dataset_full.py  build_dataset_manifests.py  check_yolo_dataset.py  export_yolo_dataset.py
training/: colab_train_identity_embedding.py  colab_train_quality_classifier.py  colab_train_yolo_detector.py  train_yolo_detector.py
