[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edgevision"
version = "0.1.0"
description = "Pill visual inspection pipeline for detection, counting, identification, and OK/NG checks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0"
]

[project.optional-dependencies]
yolo = [
  "ultralytics>=8.3"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
edgevision = "edgevision.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["edgevision*"]

[tool.ruff]
line-length = 100
target-version = "py310"

